# arrivalsign

./: .gitignore  db.py  examples.py  firebase.json  grabStations.js  stations.json  stations_list.json  stations_objs.json  vetur.config.js
.github/workflows/: build-admin.yml  firebase-hosting-merge.yml
admin/: Dockerfile  main.py
frontend/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
frontend/firebase/: .firebaserc
frontend/src/: App.vue  main.ts
frontend/src/components/: AlertEditor.vue  BaseLayout.vue  TrainArrivalEditor.vue
frontend/src/firebase/: index.ts
frontend/src/models/: index.ts
frontend/src/plugins/: index.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/store/: app.ts
frontend/src/views/: Home.vue  Login.vue  Logout.vue
frontend/vite/: package.json  vite.config.ts
pi/: 6x10.bdf  7x14.bdf  Dockerfile  db.py  emulator_config.json  led.py  main.py  network.py  requirements.txt  requirements_emulator.txt  run.sh  temp.py  tests.py  utils.py
pi/widgets/: __init__.py  alerts.py  arrival.py  utils.py
rustpi/: Cargo.toml  Makefile
rustpi/src/: firebase.rs  led.rs  main.rs  startup.rs
rustpi/src/widgets/: alerts.rs  arrival.rs  mod.rs
