[package]
name = "rustpi"
version = "0.1.0"
edition = "2021"

[features]
default = ["simulator"]
simulator = ["dep:embedded-graphics-simulator"]
rpi = ["dep:rpi-led-panel"]

[dependencies]
rpi-led-panel = { version = "0.6.0", optional = true }
embedded-graphics-simulator = { version = "0.7.0", optional = true }
embedded-graphics = "0.8.1"
cached = "0.54.0"
dotenv = "0.15.0"
firebase-rs = "2.2.0"
serde = "1.0.217"
retry = "2.0.0"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
itertools = "0.14.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
